--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validation": "^4.1.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "nodemon": "^3.1.10",
     "swagger-jsdoc": "^6.2.8",
